--- a/Areas/Admin/Views/OrderManagement/OrderIndex.cshtml
+++ b/Areas/Admin/Views/OrderManagement/OrderIndex.cshtml
@@ -76,15 +76,12 @@
             <div class="panel-body">
                 @foreach (var item in list_order_orderdetail)
                 {
-
-
                     if (item.Orders != null)
                     {
                         <div class="col-12 col-md-12" style="padding-top:25px">
                             <div class="row all_info">
                                 <div class="col-md-5">
                                     <div class="card mb-4" style="border: #ff006e 1px solid">
-
                                         <div class="card-header py-3 text-center">
                                             <div class="row">
                                                 <div class="mr-auto" style="padding-left:6px">
@@ -223,7 +220,7 @@
 
                                                                                 </div>
                                                                             </div>
-                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" style="font-size:11px" class="btn btn-danger">
+                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" target="_blank" style="font-size:11px" class="btn btn-danger">
                                                                                 Assign
                                                                             </a>
                                                                         </div>
@@ -282,7 +279,7 @@
 
                                                                                 </div>
                                                                             </div>
-                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" style="font-size:11px" class="btn btn-danger">
+                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" target="_blank" style="font-size:11px" class="btn btn-danger">
                                                                                 Assign
                                                                             </a>
                                                                         </div>
@@ -341,7 +338,7 @@
 
                                                                                 </div>
                                                                             </div>
-                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" style="font-size:11px" class="btn btn-danger">
+                                                                            <a href="/Admin/ServiceManagement/Assign_Staff/@ord.Id" target="_blank" style="font-size:11px" class="btn btn-danger">
                                                                                 Assign
                                                                             </a>
                                                                         </div>
@@ -358,7 +355,6 @@
                             </div>
                         </div>
                     }
-
                 }
             </div>
         </div>
@@ -368,7 +364,6 @@
 
 <button onclick="topFunction()" style="background-color: transparent" id="btn_top" title="Go to top">
     <img src="~/Public/Image/up-arrow (1).png" width="50" height="50" />
-
 </button>
 @section css{
     <link href="~/Areas/Admin/Public/css/order.css" rel="stylesheet" />
@@ -408,18 +403,6 @@
 
 @section js {
     <script type="text/javascript">
-        window.onscroll = function () { scrollFunction() };
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("btn_top").style.display = "block";
-            } else {
-                document.getElementById("btn_top").style.display = "none";
-            }
-
-        }
-        function topFunction() {
-            $('html, body').animate({ scrollTop: 0 }, 'slow');
-        }
         function _Activate(Id) {
             $.ajax({
                 url: "/Admin/ServiceManagement/Activate?ord_id=" + Id,
