--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -105,7 +105,7 @@
                     @if (list_role.Contains("Admin"))
                     {
         <li class="nav-item">
-            <a class="nav-link Add" onclick="return _Register()">
+            <a class="nav-link AddUser" onclick="return _Register()">
                 <i class="ni ni-circle-08 text-pink"></i>
                 <span class="nav-link-text">Register</span>
             </a>
