--- a/Areas/Admin/Views/StaffManagement/StaffFreeIndex.cshtml
+++ b/Areas/Admin/Views/StaffManagement/StaffFreeIndex.cshtml
@@ -2,7 +2,7 @@
     List<string> list_role = (List<string>)Session["ListRole"]; }
 @{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml"; }
 @using _ExcellOn_.Models
-@{ List<Staff> list_staff = ViewBag.list_staff; }
+@{ List<Staff> list_staff_free = ViewBag.list_staff_free; }
 <div class="container" style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
     <div class="header-body">
         <div class="row align-items-center py-4">
@@ -48,9 +48,9 @@
                         </tr>
                     </thead>
                     <tbody class="list">
-                        @if (list_staff != null)
+                        @if (list_staff_free != null)
                         {
-                            foreach (var item in list_staff)
+                            foreach (var item in list_staff_free)
                             {
                         <tr>
                             <th>
@@ -94,17 +94,15 @@
                                 <i class="bg-warning"></i>
                                 <span id="status_@item.Id">Training</span>
                             </span>
-                        </td>
- }
-                    else
-                    {
+                        </td> }
+                                            else
+                                            {
                         <td>
                             <span class="badge badge-dot mr-4">
                                 <i class="bg-info"></i>
                                 <span id="status_@item.Id">Profession</span>
                             </span>
-                        </td>
-}
+                        </td>}
                             <td class="text-right">
                                 <div class="dropdown">
                                     <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -124,6 +122,9 @@
                         </tr>
 }
     }
+
+
+
                     </tbody>
                 </table>
 
@@ -155,8 +156,7 @@
                     }
                 }
             });
-        });
-    </script>
+        });</script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
     <script type="text/javascript">
         function _Delete(StaffId) {
@@ -209,6 +209,5 @@
                     alert("Error !");
                 }
             });
-        }
-    </script>
+        }</script>
 }
